--- a/app/src/main/res/layout/layout_row_video_player.xml
+++ b/app/src/main/res/layout/layout_row_video_player.xml
@@ -1,52 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:layout_marginStart="8dp"
-    android:layout_marginEnd="8dp"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <com.google.android.material.imageview.ShapeableImageView
-        android:layout_width="100dp"
-        android:layout_height="70dp"
-        tools:src="@tools:sample/avatars"/>
+    <data>
+
+    </data>
 
     <LinearLayout
-        android:layout_marginStart="8dp"
         android:orientation="vertical"
-        android:layout_width="0dp"
-        android:layout_weight="0.6"
-        android:layout_height="70dp">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/video_title"
+        <!--<androidx.cardview.widget.CardView
+            app:cardCornerRadius="8dp"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:text="@string/video_title"
-            android:fontFamily="@font/poppins_bold"
-            android:textColor="@color/black"/>
+            android:layout_height="match_parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp">
 
-        <TextView
-            android:id="@+id/video_folder"
+
+
+        </androidx.cardview.widget.CardView>-->
+
+
+        <LinearLayout
+            android:clickable="true"
+            android:focusable="true"
+            android:background="?attr/selectableItemBackground"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:text="@string/folder_name"
-            android:fontFamily="@font/poppins_bold"
-            android:textColor="@color/black"/>
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginStart="4dp">
 
+            <com.google.android.material.imageview.ShapeableImageView
+                android:layout_width="100dp"
+                android:layout_height="80dp"
+                android:scaleType="fitCenter"
+                android:alpha="0.5"
+                android:src="@mipmap/ic_launcher"
+                android:contentDescription="@string/image"
+                app:shapeAppearanceOverlay="@style/customImageStyle"/>
+
+            <LinearLayout
+                android:layout_marginStart="8dp"
+                android:orientation="vertical"
+                android:layout_width="0dp"
+                android:layout_weight="0.8"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:ellipsize="marquee"
+                    android:marqueeRepeatLimit="marquee_forever"
+                    android:id="@+id/video_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:text="@string/video_title"
+                    style="@style/customTitleStyle"
+                    android:singleLine="true" />
+
+                <TextView
+                    android:ellipsize="marquee"
+                    android:marqueeRepeatLimit="marquee_forever"
+                    android:id="@+id/video_folder"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:text="@string/folder_name"
+                    style="@style/customSubTitleStyle" />
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/elapsedtime"
+                android:layout_width="wrap_content"
+                android:layout_height="80dp"
+                android:text="@string/_00_00"
+                android:gravity="center"
+                android:textColor="@color/black"
+                android:layout_marginEnd="8dp"
+                android:fontFamily="@font/poppins_regular" />
+
+        </LinearLayout>
+
+        <View
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="?android:attr/listDivider" />
     </LinearLayout>
 
-    <TextView
-        android:layout_weight="0.1"
-        android:layout_width="0dp"
-        android:layout_height="70dp"
-        android:text="@string/_00_00"
-        android:gravity="center"
-        android:textColor="@color/black"
-        android:fontFamily="@font/poppins_regular"/>
 
-</LinearLayout>
+</layout>
