--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -36,4 +36,21 @@
         <item name="itemIconTint">@drawable/selector_bottom_nav_icon_color</item>
         <item name="itemRippleColor">@color/ripple_pink</item>
     </style>
+
+    <style name="customTitleStyle">
+        <item name="android:fontFamily">@font/poppins_bold</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:padding">5dp</item>
+    </style>
+    <style name="customSubTitleStyle">
+        <item name="android:fontFamily">@font/poppins_regular</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:padding">5dp</item>
+    </style>
+
+    <style name="customImageStyle">
+        <item name="cornerSize">15dp</item>
+    </style>
 </resources>
