--- a/app/src/main/res/layout/fragment_all_videos.xml
+++ b/app/src/main/res/layout/fragment_all_videos.xml
@@ -22,13 +22,15 @@
             android:text="@{viewModel.totalVideos}"
             android:padding="0dp"
             tools:text="Videos"
-            android:textSize="13sp"
+            android:textSize="14sp"
             style="@style/customSubTitleStyle" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_total_videos"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:scrollbars="vertical"
+            android:scrollbarThumbVertical="@drawable/ic_scrollbar"
             tools:listitem="@layout/layout_row_video_player" />
 
     </LinearLayout>
