--- a/app/src/main/res/layout/layout_row_video_player.xml
+++ b/app/src/main/res/layout/layout_row_video_player.xml
@@ -36,13 +36,16 @@
             android:layout_marginStart="4dp">
 
             <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/video_thumbnail"
                 android:layout_width="100dp"
-                android:layout_height="80dp"
-                android:scaleType="fitCenter"
-                android:alpha="0.5"
+                android:layout_height="70dp"
+                android:scaleType="centerCrop"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="4dp"
                 android:src="@mipmap/ic_launcher"
+                android:background="@color/white"
                 android:contentDescription="@string/image"
-                app:shapeAppearanceOverlay="@style/customImageStyle"/>
+                app:shapeAppearance="@style/customImageStyle"/>
 
             <LinearLayout
                 android:layout_marginStart="8dp"
@@ -77,7 +80,7 @@
             <TextView
                 android:id="@+id/elapsedtime"
                 android:layout_width="wrap_content"
-                android:layout_height="80dp"
+                android:layout_height="60dp"
                 android:text="@string/_00_00"
                 android:gravity="center"
                 android:textColor="@color/black"
