--- a/app/src/main/res/layout/activity_folder_details.xml
+++ b/app/src/main/res/layout/activity_folder_details.xml
@@ -4,13 +4,35 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="viewModel"
+            type="com.farhazulmullick.viewmodel.VideoViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".FolderDetailsActivity">
-        
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        android:orientation="vertical"
+        tools:context=".fragment.VideosFragment">
+
+    <TextView
+        android:id="@+id/tv_total_videos"
+        android:layout_margin="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@{viewModel.totalVideos}"
+        android:padding="0dp"
+        tools:text="Videos"
+        android:textSize="14sp"
+        style="@style/customSubTitleStyle" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_total_videos"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"
+        android:scrollbarThumbVertical="@drawable/ic_scrollbar"
+        tools:listitem="@layout/layout_row_video_player" />
+    </LinearLayout>
+
 </layout>
