--- a/app/src/main/res/drawable/ic_video_lock_close.xml
+++ b/app/src/main/res/drawable/ic_video_lock_close.xml
@@ -1,11 +1,20 @@
-<vector android:height="24dp" android:viewportHeight="512"
-    android:viewportWidth="512" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#00000000"
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="512"
+    android:viewportHeight="512">
+    <path
+        android:fillColor="#00000000"
         android:pathData="M336,208v-95a80,80 0,0 0,-160 0v95"
-        android:strokeColor="currentColor" android:strokeLineCap="round"
-        android:strokeLineJoin="round" android:strokeWidth="32"/>
-    <path android:fillColor="#00000000"
+        android:strokeWidth="32"
+        android:strokeColor="@color/black"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round" />
+    <path
+        android:fillColor="#00000000"
         android:pathData="M144,208L368,208A48,48 0,0 1,416 256L416,432A48,48 0,0 1,368 480L144,480A48,48 0,0 1,96 432L96,256A48,48 0,0 1,144 208z"
-        android:strokeColor="currentColor" android:strokeLineCap="round"
-        android:strokeLineJoin="round" android:strokeWidth="32"/>
+        android:strokeWidth="32"
+        android:strokeColor="@color/black"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round" />
 </vector>
