--- a/app/src/main/res/drawable/ic_video_lock_open.xml
+++ b/app/src/main/res/drawable/ic_video_lock_open.xml
@@ -2,10 +2,10 @@
     android:viewportWidth="512" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="#00000000"
         android:pathData="M336,112a80,80 0,0 0,-160 0v96"
-        android:strokeColor="currentColor" android:strokeLineCap="round"
+        android:strokeColor="@color/black" android:strokeLineCap="round"
         android:strokeLineJoin="round" android:strokeWidth="32"/>
     <path android:fillColor="#00000000"
         android:pathData="M144,208L368,208A48,48 0,0 1,416 256L416,432A48,48 0,0 1,368 480L144,480A48,48 0,0 1,96 432L96,256A48,48 0,0 1,144 208z"
-        android:strokeColor="currentColor" android:strokeLineCap="round"
+        android:strokeColor="@color/black" android:strokeLineCap="round"
         android:strokeLineJoin="round" android:strokeWidth="32"/>
 </vector>
