--- a/app/src/main/res/drawable/ic_video_play.xml
+++ b/app/src/main/res/drawable/ic_video_play.xml
@@ -1,6 +1,10 @@
-<vector android:height="24dp" android:viewportHeight="512"
-    android:viewportWidth="512" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#00000000"
-        android:pathData="M112,111v290c0,17.44 17,28.52 31,20.16l247.9,-148.37c12.12,-7.25 12.12,-26.33 0,-33.58L143,90.84c-14,-8.36 -31,2.72 -31,20.16z"
-        android:strokeColor="currentColor" android:strokeWidth="32"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="70dp"
+    android:height="70dp"
+    android:tint="?attr/colorControlNormal"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+    <path
+        android:fillColor="@android:color/white"
+        android:pathData="M8,6.82v10.36c0,0.79 0.87,1.27 1.54,0.84l8.14,-5.18c0.62,-0.39 0.62,-1.29 0,-1.69L9.54,5.98C8.87,5.55 8,6.03 8,6.82z" />
 </vector>
