--- a/app/src/main/res/layout/layout_row_video_player.xml
+++ b/app/src/main/res/layout/layout_row_video_player.xml
@@ -27,6 +27,7 @@
 
 
         <LinearLayout
+            android:id="@+id/container"
             android:clickable="true"
             android:focusable="true"
             android:background="?attr/selectableItemBackground"
