--- a/app/src/main/res/layout/activity_exoplayer.xml
+++ b/app/src/main/res/layout/activity_exoplayer.xml
@@ -1,209 +1,215 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root_view_group"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".ExoplayerActivity"
+    android:background="@color/black">
 
-    <data>
-
-    </data>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <com.google.android.exoplayer2.ui.PlayerView
+        android:id="@+id/exo_player_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ExoplayerActivity"
-        android:background="@color/black">
-
-        <com.google.android.exoplayer2.ui.PlayerView
-            android:id="@+id/exo_player_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:keepScreenOn="true"
-            app:controller_layout_id="@layout/custom_exo_control_view"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" >
+        android:keepScreenOn="true"
+        app:controller_layout_id="@layout/custom_exo_control_view"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" >
 
 
-        </com.google.android.exoplayer2.ui.PlayerView>
+    </com.google.android.exoplayer2.ui.PlayerView>
 
-        <LinearLayout
-            android:id="@+id/top_controller"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:background="#42000000"
-            android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <ImageButton
-                android:id="@+id/btn_video_back"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:clickable="true"
-                android:contentDescription="@string/vide_back"
-                android:focusable="true"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:src="@drawable/ic_video_back"
-                app:tint="@color/white"/>
-
-            <TextView
-                android:id="@+id/tv_video_title"
-                style="@style/customSubTitleStyle"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:contentDescription="@string/video_title"
-                android:ellipsize="marquee"
-                android:gravity="center"
-                android:marqueeRepeatLimit="marquee_forever"
-                android:singleLine="true"
-                android:text="Title"
-                android:textColor="@color/white"
-                android:textSize="14sp" />
-
-            <ImageButton
-                android:id="@+id/video_menu"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginEnd="50dp"
-                android:clickable="true"
-                android:focusable="true"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:src="@drawable/ic_video_menu"
-                app:tint="@color/white" />
-
-
-        </LinearLayout>
+    <LinearLayout
+        android:id="@+id/exo_top_container"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="#42000000"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageButton
-            android:id="@+id/btn_lock_close"
+            android:id="@+id/btn_video_back"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/ic_video_lock_close"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:contentDescription="@string/video_lock_close"
-            android:focusable="true"
             android:clickable="true"
+            android:contentDescription="@string/vide_back"
+            android:focusable="true"
             android:background="?attr/selectableItemBackgroundBorderless"
+            android:src="@drawable/ic_video_back"
+            app:tint="@color/white"/>
+
+        <TextView
+            android:id="@+id/tv_video_title"
+            style="@style/customSubTitleStyle"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:contentDescription="@string/video_title"
+            android:ellipsize="marquee"
+            android:gravity="center"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:singleLine="true"
+            android:text="Title"
+            android:textColor="@color/white"
+            android:textSize="14sp" />
+
+        <ImageButton
+            android:id="@+id/exo_more_features"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:src="@drawable/ic_video_menu"
             app:tint="@color/white" />
 
-        <RelativeLayout
-            android:id="@+id/relativeLayout"
+        <ImageButton
+            android:id="@+id/exo_lock_open"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:clickable="true"
+            android:visibility="visible"
+            android:focusable="true"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:src="@drawable/ic_video_lock_open"
+            app:tint="@color/white" />
+
+
+    </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/exo_lock_close"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:visibility="gone"
+        android:src="@drawable/ic_video_lock_close"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/video_lock_close"
+        android:focusable="true"
+        android:clickable="true"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        app:tint="@color/white" />
+
+    <RelativeLayout
+        android:id="@+id/exo_media_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/exo_bottom_container"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/exo_top_container">
+
+        <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/top_controller">
-
-            <LinearLayout
-                android:id="@+id/linearLayout"
-                android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:gravity="center|center_horizontal"
-                android:orientation="horizontal"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent">
-
-
-                <ImageButton
-                    android:id="@+id/exo_prev"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="16dp"
-                    android:layout_weight="1"
-                    android:background="?attr/selectableItemBackgroundBorderless"
-                    android:clickable="true"
-                    android:contentDescription="@string/video_lock_close"
-                    android:focusable="true"
-                    android:src="@drawable/ic_exo_previous"
-                    app:tint="@color/white" />
-
-                <ImageButton
-                    android:id="@+id/imageButton3"
-                    android:layout_width="0dp"
-                    android:layout_height="50dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_weight="1"
-                    android:background="?attr/selectableItemBackgroundBorderless"
-                    android:clickable="true"
-                    android:contentDescription="@string/video_lock_close"
-                    android:focusable="true"
-                    android:src="@drawable/ic_exo_icon_rewind"
-                    app:tint="@color/white" />
-
-                <ImageButton
-                    android:id="@+id/img_play_pause"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="?attr/selectableItemBackground"
-                    android:clickable="true"
-                    android:focusable="true"
-                    app:srcCompat="@drawable/ic_exo_icon_play"
-                    app:tint="@color/white" />
-
-
-                <ImageButton
-                    android:layout_width="0dp"
-                    android:layout_height="50dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_weight="1"
-                    style="@style/ExoMediaButton.FastForward"
-                    android:background="?attr/selectableItemBackgroundBorderless"
-                    android:clickable="true"
-                    android:contentDescription="@string/video_lock_close"
-                    android:focusable="true"
-                    android:src="@drawable/ic_exo_icon_fastforward"
-                    app:tint="@color/white" />
-
-                <ImageView
-                    android:id="@+id/exo_next"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_weight="1"
-                    android:background="?attr/selectableItemBackgroundBorderless"
-                    android:clickable="true"
-                    android:contentDescription="@string/video_lock_close"
-                    android:focusable="true"
-                    android:src="@drawable/ic_exo_next"
-                    app:tint="@color/white" />
-
-            </LinearLayout>
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/relativeLayout2"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:background="#42000000"
+            android:layout_height="70dp"
+            android:gravity="center|center_horizontal"
             android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
+
             <ImageButton
-                android:id="@+id/btn_full_screen"
-                android:layout_width="wrap_content"
+                android:id="@+id/exo_prev"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="true"
-                android:layout_centerInParent="true"
                 android:layout_marginEnd="16dp"
-                android:layout_marginBottom="10dp"
+                android:layout_weight="1"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:clickable="true"
+                android:contentDescription="@string/video_lock_close"
                 android:focusable="true"
-                android:src="@drawable/ic_video_fullscreen"
+                android:src="@drawable/ic_exo_previous"
                 app:tint="@color/white" />
-        </RelativeLayout>
+
+            <ImageButton
+                android:id="@+id/exo_seek_backword"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_marginEnd="8dp"
+                android:layout_weight="1"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:clickable="true"
+                android:contentDescription="@string/video_lock_close"
+                android:focusable="true"
+                android:src="@drawable/ic_exo_icon_rewind"
+                app:tint="@color/white" />
+
+            <ImageButton
+                android:id="@+id/exo_play_pause"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="?attr/selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                app:srcCompat="@drawable/ic_exo_icon_play"
+                app:tint="@color/white" />
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</layout>
+            <ImageButton
+                android:id="@+id/exo_seek_forward"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="8dp"
+                android:layout_weight="1"
+                style="@style/ExoMediaButton.FastForward"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:clickable="true"
+                android:contentDescription="@string/video_lock_close"
+                android:focusable="true"
+                android:src="@drawable/ic_exo_icon_fastforward"
+                app:tint="@color/white" />
+
+            <ImageView
+                android:id="@+id/exo_next"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_weight="1"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:clickable="true"
+                android:contentDescription="@string/video_lock_close"
+                android:focusable="true"
+                android:src="@drawable/ic_exo_next"
+                app:tint="@color/white" />
+
+        </LinearLayout>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/exo_bottom_container"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <ImageButton
+            android:id="@+id/btn_full_screen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_centerInParent="true"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="12dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:focusable="true"
+            android:src="@drawable/ic_exo_enter_fullscreen"
+            app:tint="@color/white" />
+    </RelativeLayout>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
