--- a/app/src/main/res/layout/layout_more_features_menu.xml
+++ b/app/src/main/res/layout/layout_more_features_menu.xml
@@ -28,6 +28,7 @@
                 app:iconGravity="top" />
 
             <com.google.android.material.button.MaterialButton
+                android:id="@+id/exo_subtitle"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
