--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -71,10 +71,11 @@
         <item name="android:windowTranslucentNavigation">true</item>
     </style>
 
-    <style name="audio_track_theme">
+    <style name="audio_track_theme" parent="Theme.AppCompat.Dialog.Alert">
         <item name="android:textSize">14sp</item>
         <item name="android:fontFamily">@font/poppins_regular</item>
         <item name="android:background">@color/apple_color</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="menu_options_exoplayer">
