--- a/app/src/main/res/layout/fragment_all_videos.xml
+++ b/app/src/main/res/layout/fragment_all_videos.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.farhazulmullick.viewmodel.VideoViewModel" />
+            type="com.farhazulmullick.feature.allvideos.viewmodel.VideoViewModel" />
     </data>
 
     <LinearLayout
