--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            tools:context=".MainActivity">
+            tools:context="com.farhazulmullick.application.MainActivity">
 
             <com.google.android.material.appbar.AppBarLayout
                 android:layout_width="match_parent"
