--- a/app/src/main/res/layout/layout_row_video_player.xml
+++ b/app/src/main/res/layout/layout_row_video_player.xml
@@ -7,95 +7,104 @@
 
     </data>
 
-    <LinearLayout
-        android:orientation="vertical"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:minHeight="85dp"
+        android:background="?attr/selectableItemBackground"
+        android:paddingHorizontal="8dp"
+        android:layout_marginBottom="8dp">
 
-        <!--<androidx.cardview.widget.CardView
-            app:cardCornerRadius="8dp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginBottom="4dp">
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/video_thumbnail"
+            android:layout_width="110dp"
+            android:layout_height="70dp"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/ic_launcher"
+            android:contentDescription="@string/image"
+            app:shapeAppearance="@style/customImageStyle"
+            app:layout_constraintTop_toTopOf="@id/video_title"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintVertical_bias="0"
+            app:layout_constraintBottom_toBottomOf="@id/video_folder" />
 
 
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            app:layout_constraintTop_toTopOf="@id/video_thumbnail"
+            app:layout_constraintBottom_toBottomOf="@id/video_thumbnail"
+            app:layout_constraintStart_toStartOf="@id/video_thumbnail"
+            app:layout_constraintEnd_toEndOf="@id/video_thumbnail"
+            app:srcCompat="@drawable/ic_play_round_black"
+            android:tint="@color/white"
+            android:alpha="0.7" />
 
-        </androidx.cardview.widget.CardView>-->
-
-
-        <LinearLayout
-            android:id="@+id/container"
-            android:clickable="true"
-            android:focusable="true"
-            android:background="?attr/selectableItemBackground"
-            android:layout_width="match_parent"
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginStart="4dp">
-
-            <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/video_thumbnail"
-                android:layout_width="100dp"
-                android:layout_height="70dp"
-                android:scaleType="centerCrop"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="4dp"
-                android:src="@mipmap/ic_launcher"
-                android:background="@color/white"
-                android:contentDescription="@string/image"
-                app:shapeAppearance="@style/customImageStyle"/>
-
-            <LinearLayout
-                android:layout_marginStart="8dp"
-                android:orientation="vertical"
-                android:layout_width="0dp"
-                android:layout_weight="0.8"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:ellipsize="marquee"
-                    android:marqueeRepeatLimit="marquee_forever"
-                    android:id="@+id/video_title"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:text="@string/video_title"
-                    style="@style/customTitleStyle"
-                    android:singleLine="true" />
-
-                <TextView
-                    android:ellipsize="marquee"
-                    android:marqueeRepeatLimit="marquee_forever"
-                    android:id="@+id/video_folder"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:text="@string/folder_name"
-                    style="@style/customSubTitleStyle" />
-
-            </LinearLayout>
+            app:layout_constraintBottom_toBottomOf="@id/video_thumbnail"
+            app:layout_constraintEnd_toEndOf="@id/video_thumbnail"
+            android:layout_marginBottom="4dp"
+            android:layout_marginEnd="4dp"
+            android:backgroundTint="@color/black"
+            android:alpha="0.6"
+            app:cardCornerRadius="5dp">
 
             <TextView
                 android:id="@+id/elapsedtime"
                 android:layout_width="wrap_content"
-                android:layout_height="60dp"
-                android:text="@string/_00_00"
+                android:layout_height="wrap_content"
+                tools:text="00:00"
+                android:textSize="10sp"
                 android:gravity="center"
-                android:textColor="@color/black"
-                android:layout_marginEnd="8dp"
+                android:textColor="@color/white"
+                android:paddingHorizontal="2dp"
                 android:fontFamily="@font/poppins_regular" />
+        </com.google.android.material.card.MaterialCardView>
 
-        </LinearLayout>
+
+        <TextView
+            android:id="@+id/video_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            tools:text="@string/testing_text"
+            android:maxLines="2"
+            android:fontFamily="@font/poppins_regular"
+            android:textColor="@color/black"
+            android:textSize="14sp"
+            android:paddingHorizontal="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@id/video_thumbnail"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:ellipsize="end"/>
+
+
+        <TextView
+            android:ellipsize="marquee"
+            android:id="@+id/video_folder"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/folder_name"
+            android:paddingHorizontal="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintStart_toStartOf="@id/video_title"
+            app:layout_constraintEnd_toEndOf="@id/video_title"
+            app:layout_constraintTop_toBottomOf="@id/video_title"
+            />
 
         <View
             android:id="@+id/divider"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="?android:attr/listDivider" />
-    </LinearLayout>
+            android:background="?android:attr/listDivider"
+            app:layout_constraintTop_toBottomOf="@id/video_folder"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="2dp"
+            app:layout_constraintVertical_bias="1"/>
 
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
